<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".ui.team_detail.TeamDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/purple_700"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <RelativeLayout
                android:id="@+id/relativeView"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:background="@color/purple_700">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imgTeamLogo"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/dimen_30dp"
                            android:scaleType="centerCrop"
                            />

                        <TextView
                            android:id="@+id/tvTeamNameTeamDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imgTeamLogo"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:gravity="center"
                            tools:text="Arsenal"
                            android:textSize="@dimen/dimen_18sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvLeagueNameTeamDetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tvTeamNameTeamDetail"
                            android:gravity="center"
                            tools:text="laliga"
                            android:layout_marginBottom="@dimen/dimen_20dp"
                            android:textColor="@color/black"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:background="@color/purple_700"
                app:navigationIcon="@drawable/ic_back_white"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <TextView
            android:id="@+id/tvLabelYearTeamDetail"
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/year"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLabelCountryTeamDetail"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvLabelSportTeamDetail"
            android:layout_width="@dimen/dimen_70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:gravity="center"
            android:text="@string/coach"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvValueYearTeamDetail"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLabelCountryTeamDetail"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:textColor="@color/colorBlack"
            />

        <ImageView
            android:id="@+id/imgValueCountryTeamDetail"
            android:layout_width="100dp"
            android:layout_height="@dimen/dimen_20dp"
            android:layout_below="@+id/tvLabelCountryTeamDetail"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:gravity="center"
            android:textColor="@color/colorBlack"
             />

        <TextView
            android:id="@+id/tvValueSportTeamDetail"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLabelCountryTeamDetail"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:alpha="0.3"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:layout_below="@id/tvValueSportTeamDetail"
            android:background="@color/black"
            android:layout_marginHorizontal="@dimen/dimen_20dp"/>

        <TextView
            android:id="@+id/tvUEFATeamDetail"
            android:layout_width="@dimen/dimen_80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:text="@string/uefa_rank"
            android:textColor="@color/colorBlack"
            />

        <TextView
            android:id="@+id/tvValueUEFATeamDetail"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvValueTwitterTeamDetail"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_toEndOf="@id/tvUEFATeamDetail"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/tvTwitterTeamDetail"
            android:layout_width="@dimen/dimen_80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUEFATeamDetail"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/twitter"
            android:textColor="@color/colorBlack"
            />

        <TextView
            android:id="@+id/tvValueTwitterTeamDetail"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUEFATeamDetail"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_toEndOf="@id/tvTwitterTeamDetail"
            android:textColor="@color/colorBlack" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>